--- a/个人规范.md
+++ b/个人规范.md
@@ -2,19 +2,19 @@
 
 ```
 var num = 0;
-function getNum(fIndex,fName){
+function getNum(__index,__name){
     let _index = 0;
     this.$api.get("/login",aJson=>{
         let _list = aJson.data;
         this.$api.get("/login",bJson=>{
             let _obj = bJson.data;
         },{
-            index:fIndex,
-            name:fName
+            index:__index,
+            name:__name
         })
     },{
-        index:fIndex,
-        name:fName
+        index:__index,
+        name:__name
     }) 
 }
 
