--- a/个人规范.md
+++ b/个人规范.md
@@ -1,8 +1,14 @@
+###说明
+/*
+事件统一Evt结束
+获取值的全部以get开头
+设置值的全部以set开头
+*/
 ### 变量
 
 ```
 var num = 0;
-function getNum(__index,__name){
+function getList(__index,__name){
     let _index = 0;
     this.$api.get("/login",aJson=>{
         let _list = aJson.data;
@@ -22,9 +28,9 @@ function getNum(__index,__name){
 ###事件都使用Evt
 ```
 
-function goSearchEvt(fIndex,fName){
-    this.index = fIndex;
-    this.name = fName;
+function goSearchEvt(__index,__name){
+    this.index = __index;
+    this.name = __name;
 }
 
 ```
