--- a/个人规范.md
+++ b/个人规范.md
@@ -1,3 +1,6 @@
+###基于vue开发规范
+
+
 ###说明
 /*
 事件统一Evt结束
@@ -7,20 +10,23 @@
 ### 变量
 
 ```
-var num = 0;
-function getList(__index,__name){
+/*
+在函数里取data值都是this.xx方式
+函数内定义的值都是局部的,以_开始命名
+*/
+function getList(index,name){
     let _index = 0;
     this.$api.get("/login",aJson=>{
         let _list = aJson.data;
         this.$api.get("/login",bJson=>{
             let _obj = bJson.data;
         },{
-            index:__index,
-            name:__name
+            index:index,
+            name:name
         })
     },{
-        index:__index,
-        name:__name
+        index:index,
+        name:name
     }) 
 }
 
@@ -28,9 +34,9 @@ function getList(__index,__name){
 ###事件都使用Evt
 ```
 
-function goSearchEvt(__index,__name){
-    this.index = __index;
-    this.name = __name;
+function goSearchEvt(index,name){
+    this.index = index;
+    this.name = name;
 }
 
 ```
