--- a/个人笔记.md
+++ b/个人笔记.md
@@ -157,3 +157,68 @@ window.onload = function() {
     };  
 };
 ```
+
+###css三角形
+
+```
+//上三角形
+#triangle-up{
+    width:0;
+    height:0;
+    border-left:50px solid transparent;
+    border-right:50px solid transparent;
+    border-bottom:100px solid black;
+}
+//下三角形
+#triangle-down{
+    width：0；
+    height：0；
+    border-left：50px solid transparent；
+    border-right:50px solid transparent;
+    border-top:100px solid black;
+}
+//左三角形
+#triangle-left{
+    width：0；
+    height：0；
+    border-top：50px solid transparent；
+    border-bottom:50px solid transparent;
+    border-right:100px solid black;
+}
+//右三角形
+#triangle-right{
+    width：0；
+    height：0；
+    border-top：50px solid transparent；
+    border-bottom:50px solid transparent;
+    border-left:100px solid black;
+}
+//左上三角形
+#triangle-topleft{
+    width：0；
+    height：0；
+    border-top：100px solid black；
+    border-right:100px solid transparent;
+}
+//右上三角形
+#triangle-topright{
+    width：0；
+    height：0；
+    border-top：100px solid black；
+    border-left：100px solid transparent；
+}
+//左下三角形
+#triangle-bottomleft{
+    width：0；
+    height：0；
+    border-bottom：100px solid black；
+    border-right：100px solid transparent；
+}
+//右下三角形
+#triangle-bottomright{
+    width：0；
+    height：0；
+    border-bottom：100px solid black；
+    border-left：100px solid transparent；
+}
+```
