--- a/个人笔记.md
+++ b/个人笔记.md
@@ -100,6 +100,8 @@ a:active {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
+    word-wrap:break-word;
+    word-break:break-all;
     overflow: hidden;
 }
 ```
